# MnemoQ

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  Memory-development-plan.md  README.md  SECURITY.md  coverage-baseline.txt  opencode.json  original_filter.py  per-prompt-evaluation-decisions-92d959.md  per-prompt-evaluation-fef263.md  pyproject.toml  test.json
.claude/: README.md
.claude/agents/: code-reviewer.md  docs-writer.md  explorer.md  gm.md  meta-agent.md  plan-reviewer.md  refactorer.md  security.md
.claude/commands/: _git-lock.md  commit.md  fast-ship.md  pr.md  publish.md  push.md  rebase.md  ship.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
.opencode/Plans/: agent-memory-system-explainer.md  agent-memory-system-v1.md  agent-memory-system-v2.md  agent-memory-system-v3.md  option-a-multi-project-implementation-797eee.md  phase-1-1-hygiene-baseline.md  phase-1-2-resolver-refactor.md  phase-1-3-handoff.md  phase-1-3-shim-cutover.md  refactor-filter-py-safety-first.md  v1-step-12-sleep-cycle.md
.opencode/Prompts/: ChaosMonkey.md  Fuzzer.md  MetaAgent.md  Overmind.md  basic-reviewer.md  code-reviewer.md  docs-writer.md  explorer.md  gm.md  meta-agent.md  plan-reviewer.md  plan-triage.md  pro-reviewer.md  refactorer.md  security.md  test-writer.md  triage-review.md
.opencode/commands/: bioloop.md  commit.md  publish.md  ship.md
.windsurf/: hooks.json
.windsurf/Plans/: advanced-metrics-system-686f76.md  auto-learning-system-cb6d42.md  fake-memory-generator-8e535e.md  memory-engine-gui-686f76.md  memory-engine-roadmap-consolidated.md  memory-upgrade-progression.md  tier-1-expanded.md  tier-2-expanded.md  web-dashboard-2.3-audit-follow-up.md  web-dashboard-2.3-audit-report.md  web-dashboard-2.3.md
.windsurf/workflows/: _git-lock.md  capture.md  chaos-monkey.md  code-reviewer.md  commit.md  explorer.md  fast-ship.md  gm.md  meta-agent.md  overmind.md  plan-deviation.md  plan-reviewer.md  pr.md  publish.md  push.md  rebase.md  refactorer.md  security.md  ship.md  test-writer.md  triage-review.md
docs/: README.md  ROADMAP.md  architecture-overview.md  cli-reference.md  config-tuning.md  data-schema.md  integration-guide.md  mcp-integration.md  open-core-architecture.md  phase1-retrieval-quality-summary.md  sdk-guide.md
memory/: .consolidate_session.json  .gitignore  AGENTS.md  HANDOFF.md  SYSTEM_INVARIANTS.md  _test_fakes.jsonl  config.json  fakes.jsonl  filter.py  learnings.jsonl  metrics.jsonl  quarantine.jsonl
memory/.baseline/: capture-baselines.ps1  consolidate-force.txt  consolidate.txt  diff-gate.ps1  fixture-agents.md  learnings-after-consolidate.jsonl  learnings-after-log.jsonl  learnings-after-retrieval.jsonl  log-dup.txt  log-new.txt  old_filter.py  quarantine-after-log.jsonl  retrieval-component.txt  retrieval-domain.txt  retrieval-empty.txt  retrieval-escalation.txt  retrieval-no-domain.txt  review-agents.txt  sprint-1.jsonl  stats.txt  step-alone.txt  test-entry.json  test-invalid.json  version-stderr.txt
memory/archive/: sprint-1.jsonl
memory/eval/: dialogue.jsonl  grading.jsonl
scripts/: deploy.ps1  deploy.sh  generate_fakes.py  sim_dialogue.py
scripts/hooks/: post-commit
src/: engine_version.py  filter.py  scaffold.py  shim.py  update.py
src/agent_memory/: __init__.py  cli.py  engine_version.py  managed_section.py  mcp_main.py  scaffold.py  update.py
src/engine/: agents_review.py  analysis.py  consolidation.py  constants.py  dashboard_api.py  git_utils.py  handlers.py  io.py  mcp_server.py  metrics.py  migrate.py  models.py  profile.py  reranker.py  retrieval.py  server.py  validation.py
src/mnemoq/: __init__.py  cli.py  engine_version.py  mcp_main.py  scaffold.py  shim.py  update.py
src/sdk/: client.py
templates/: agents-memory-section.md  config.json  opencode-snippet.json
templates/config-presets/: generic.json  phaser.json
templates/cursor-rules/: docs-writer.mdc  (+9 more)
tests/: conftest.py  test_auto_learn.py  test_capture_cli.py  test_capture_hook.py  test_capture_r5.py  test_capture_scenarios.py  test_cli.py  test_concurrency.py  test_config.py  test_consolidation_homeostasis.py  test_eval.py  test_evaluate.py  test_fake_gen_api.py  test_handlers.py  test_homeostasis.py  test_install_hooks.py  test_managed_section.py  test_memory.py  test_metrics.py  test_pure_functions.py  test_r7_sleep_cycle.py  test_r8_scaffold.py  test_retrieval_integration.py  test_scaffold.py  test_sdk.py  test_server.py  test_sim_dialogue.py  test_surface_parity.py  test_triggers.py
(+105 files in other folders)
